--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../assets/css/bootstrap-css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../assets/css/custom-css/footer.css">
-    <link rel="stylesheet" href="../../assets/css/custom-css/header.css">
-    <link rel="stylesheet" href="../../assets/css/custom-css/main.css">
-    <link rel="stylesheet" href="../../assets/css/custom-css/bmi-calculator.css">
+    <link rel="stylesheet" href="assets/css/bootstrap-css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/custom-css/footer.css">
+    <link rel="stylesheet" href="assets/css/custom-css/header.css">
+    <link rel="stylesheet" href="assets/css/custom-css/main.css">
+    <link rel="stylesheet" href="assets/css/custom-css/bmi-calculator.css">
     <script src="https://kit.fontawesome.com/a3a7fd7e68.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <title>Gym | Fitness</title>
