--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -217,7 +217,7 @@
     </div>
     <!-- </div> -->
   </section>
-  <!-- begin footer -->
+
 
 
 <!-- begin footer -->
@@ -227,7 +227,7 @@
         <div class="row top justify-content-between">
             <div class="col-md-3">
                 <div class="py-3 d-md-block">
-                    <img src="../../assets/img/logo.png" alt="Fitfam logo icon">
+                    <img src="assets/img/logo.png" alt="Fitfam logo icon">
                 </div>
                 <p class="py-2">
                     Orci vel in vel, amet pellentesque. Nec in auctor diam duis sit. Imperdiet in egestas eu consectetur eros, turpis. Sapien vitae mauris eu ultrices suspendisse risus, malesuada nibh. Venenatis orci neque quam quisque gravida ultrices. Vestibulum sit pellentesque
